// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox snapshots checked 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_checked SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      checked=""
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-taee0p-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-16x9btp-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-1ibkuv8-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color-brand 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-z2fv0j-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color-danger 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_danger SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-1d461s2-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color-success 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_success SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-1ujgms5-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots color-warning 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_warning SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-yc8hmp-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots default 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-z2fv0j-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots disabled 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_disabled SxCheckbox_borderRadius_smooth css-e7gz1o-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      disabled=""
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-14di1xc-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-1y8u7qq-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-eu8vm3-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots indeterminate 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_smooth SxCheckbox_indeterminate css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-z2fv0j-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <div
          class="SxCheckbox-icon css-x431jg-SxCheckbox-icon"
        />
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots large 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_large SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-r1vsyw-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="9"
          viewBox="0 0 12 9"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.37363 3.289C1.98363 2.899 1.35063 2.899 0.959632 3.289C0.568632 3.68 0.568632 4.313 0.959632 4.704L4.66563 8.41L11.3776 1.707C11.7686 1.317 11.7686 0.684 11.3786 0.293C10.9876 -0.0969995 10.3546 -0.0979995 9.96363 0.292L4.66663 5.582L2.37363 3.289Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-cm3ghj-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots medium 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-z2fv0j-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots small 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_small SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-1qe0gbv-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 10 8"
          width="10"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M1.69881 3.43125C1.38681 3.11925 0.880408 3.11925 0.567608 3.43125C0.254808 3.74405 0.254808 4.25045 0.567608 4.56325L3.53241 7.52805L8.90201 2.16565C9.21481 1.85365 9.21481 1.34725 8.90281 1.03445C8.59001 0.722449 8.08361 0.721649 7.77081 1.03365L3.53321 5.26565L1.69881 3.43125Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-dxf6ba-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots smooth 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_smooth css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-z2fv0j-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox snapshots square 1`] = `
<DocumentFragment>
  <label
    class="SxCheckbox SxCheckbox_size_medium SxCheckbox_color_brand SxCheckbox_borderRadius_square css-1ltgxet-SxCheckbox-root"
  >
    <input
      class="SxCheckbox-input css-1oqv4jf-SxCheckbox-input"
      type="checkbox"
      value=""
    />
    <div
      class="SxCheckbox-checkboxContainer css-i3pz43-SxCheckbox-checkboxContainer"
    >
      <div
        class="SxCheckbox-overlay css-18ron9d-SxCheckbox-overlay"
      >
        <svg
          class="SxCheckbox-icon css-mvhp1b-SxCheckbox-icon"
          fill="currentcolor"
          height="8"
          viewBox="0 0 11 8"
          width="11"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M2.03616 3.36025C1.68516 3.00925 1.11546 3.00925 0.763559 3.36025C0.411659 3.71215 0.411659 4.28185 0.763559 4.63375L4.09896 7.96915L10.1398 1.93645C10.4917 1.58545 10.4917 1.01575 10.1407 0.663847C9.78876 0.312847 9.21906 0.311947 8.86716 0.662947L4.09986 5.42395L2.03616 3.36025Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <span
      class="SxCheckbox-content css-119u27e-SxCheckbox-content"
    >
      Checkbox
    </span>
  </label>
</DocumentFragment>
`;
